--- a/Magic 8 Ball/Magic 8 Ball/Base.lproj/Main.storyboard
+++ b/Magic 8 Ball/Magic 8 Ball/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                                     <action selector="askButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xfX-2i-e0w"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ball1" translatesAutoresizingMaskIntoConstraints="NO" id="cjA-pd-GRE">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cjA-pd-GRE">
                                 <rect key="frame" x="8" y="134" width="304" height="300"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -56,7 +56,4 @@
             <point key="canvasLocation" x="135" y="132.04225352112675"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="ball1" width="460" height="412.5"/>
-    </resources>
 </document>
